# Structural-Programming-23-24

./: CMakeLists.txt  README.md
aud_vezhbi/: zad20.cpp  zad21.cpp  zad25.cpp  zad28.cpp  zad29.cpp  zad38.cpp  zad45.cpp  zad46.cpp  zad47.cpp  zad49.cpp  zad50.cpp  zad54.cpp  zad55.cpp  zad56.cpp
aud_vezhbi/vtor_kolokvium/: zad74.cpp  zad75.cpp
aud_vezhbi/vtorkolokvium-lani/: zad59.cpp
ispitni_vezhbi/: ispitna14.cpp  ispitna15.cpp  ispitna16.cpp  ispitna17.cpp  ispitna20.cpp  ispitna23.cpp  ispitna23_kolokvium_mk_zad2_grupa2.cpp  ispitna24.cpp  ispitna25.cpp  ispitna26.cpp  ispitna4.cpp  ispitna6.cpp
labs_vezhbi/: lab8_det1.cpp  lab8_det2.cpp  lab8_det3.cpp  lab9_det1.cpp  lab9_det2.cpp  lab9_det3.cpp  lab_nedela_3_1v2.cpp  lab_nedela_3_2v2.cpp  lab_nedela_3_3v2.cpp  lab_nedela_4_1.cpp  lab_nedela_4_2.cpp  lab_nedela_4_3.cpp
labs_vezhbi/lab_ushtrime/: lab_ushtrimi_12.cpp
