cmake_minimum_required(VERSION 3.28)
project(sp24_25)

set(CMAKE_CXX_STANDARD 17)

add_executable(aud3_1 aud_vezhbi/zad0.cpp)
add_executable(aud3_2 aud_vezhbi/zad1.cpp)
add_executable(aud3_3 aud_vezhbi/zad2.cpp)
add_executable(aud3_4 aud_vezhbi/zad3.cpp)

add_executable(aud4_1 aud_vezhbi/zad4.cpp)
add_executable(aud4_2 aud_vezhbi/zad5.cpp)
add_executable(aud4_3 aud_vezhbi/zad6.cpp)
add_executable(aud4_4 aud_vezhbi/zad7.cpp)
add_executable(aud4_5 aud_vezhbi/zad8.cpp)
add_executable(aud4_6 aud_vezhbi/zad9.cpp)
add_executable(aud4_7 aud_vezhbi/zad10.cpp)
add_executable(aud4_8 aud_vezhbi/zad11.cpp)

add_executable(aud5_1 aud_vezhbi/zad12.cpp)
add_executable(aud5_2 aud_vezhbi/zad13.cpp)
add_executable(aud5_3 aud_vezhbi/zad14.cpp)
add_executable(aud5_4 aud_vezhbi/zad15.cpp)
add_executable(aud5_5 aud_vezhbi/zad16.cpp)
add_executable(aud5_6 aud_vezhbi/zad17.cpp)
add_executable(aud5_7 aud_vezhbi/zad18.cpp)
add_executable(aud5_8 aud_vezhbi/zad19.cpp)

add_executable(aud6_1 aud_vezhbi/zad20.cpp)
add_executable(aud6_2 aud_vezhbi/zad21.cpp)
add_executable(aud6_3 aud_vezhbi/zad22.cpp)
add_executable(aud6_4 aud_vezhbi/zad23.cpp)
add_executable(aud6_5 aud_vezhbi/zad24.cpp)
add_executable(aud6_6 aud_vezhbi/zad25.cpp)
add_executable(aud6_7 aud_vezhbi/zad26.cpp)
add_executable(aud6_8 aud_vezhbi/zad27.cpp)

add_executable(aud7_1 aud_vezhbi/zad28.cpp)
add_executable(aud7_2 aud_vezhbi/zad29.cpp)
add_executable(aud7_3 aud_vezhbi/zad30.cpp)
add_executable(aud7_4 aud_vezhbi/zad31.cpp)
add_executable(aud7_5 aud_vezhbi/zad32.cpp)
add_executable(aud7_6 aud_vezhbi/zad33.cpp)
add_executable(aud7_7 aud_vezhbi/zad34.cpp)
add_executable(aud7_8 aud_vezhbi/zad35.cpp)

add_executable(aud8_1 aud_vezhbi/zad36.cpp)
add_executable(aud8_2 aud_vezhbi/zad37.cpp)
add_executable(aud8_3 aud_vezhbi/zad38.cpp)
add_executable(aud8_4 aud_vezhbi/zad39.cpp)
add_executable(aud8_5 aud_vezhbi/zad40.cpp)
add_executable(aud8_6 aud_vezhbi/zad41.cpp)
add_executable(aud8_7 aud_vezhbi/zad42.cpp)
add_executable(aud8_8 aud_vezhbi/zad43.cpp)

add_executable(lab1_1 labs_vezhbi/lab1.cpp)
add_executable(lab_1_2 labs_vezhbi/lab2.cpp)
add_executable(labs2_1 labs_vezhbi/lab_nedela_2_1.cpp)
add_executable(labs2_2 labs_vezhbi/lab_nedela_2_2.cpp)
add_executable(labs2_3 labs_vezhbi/lab_nedela_2_3.cpp)
add_executable(lab3_1 labs_vezhbi/lab_nedela_3_1.cpp)
add_executable(lab3_2 labs_vezhbi/lab_nedela_3_2.cpp)
add_executable(lab3_3 labs_vezhbi/lab_nedela_3_3.cpp)
add_executable(lab_nedela_3_1v2 labs_vezhbi/lab_nedela_3_1v2.cpp)
add_executable(lab_nedela_3_2v2 labs_vezhbi/lab_nedela_3_2v2.cpp)
add_executable(lab_nedela_3_3v2 labs_vezhbi/lab_nedela_3_3v2.cpp)
add_executable(lab4_1 labs_vezhbi/lab_nedela_4_1.cpp)
add_executable(lab4_2 labs_vezhbi/lab_nedela_4_2.cpp)
add_executable(lab4_3 labs_vezhbi/lab_nedela_4_3.cpp)

add_executable(lab_ushtrimi_1 labs_vezhbi/lab_ushtrime/lab_ushtrimi_1.cpp)
add_executable(lab_ushtrimi_2 labs_vezhbi/lab_ushtrime/lab_ushtrimi_2.cpp)
add_executable(lab_ushtrimi_3 labs_vezhbi/lab_ushtrime/lab_ushtrimi_3.cpp)
add_executable(lab_ushtrimi_4 labs_vezhbi/lab_ushtrime/lab_ushtrimi_4.cpp)
add_executable(lab_ushtrimi_5 labs_vezhbi/lab_ushtrime/lab_ushtrimi_5.cpp)
add_executable(lab_ushtrimi_6 labs_vezhbi/lab_ushtrime/lab_ushtrimi_6.cpp)
add_executable(lab_ushtrimi_7 labs_vezhbi/lab_ushtrime/lab_ushtrimi_7.cpp)
add_executable(lab_ushtrimi_8 labs_vezhbi/lab_ushtrime/lab_ushtrimi_8.cpp)

add_executable(ispitna1 ispitni_vezhbi/ispitna1.cpp)
add_executable(ispitna2 ispitni_vezhbi/ispitna2.cpp)
add_executable(ispitna3 ispitni_vezhbi/ispitna3.cpp)
add_executable(ispitna4 ispitni_vezhbi/ispitna4.cpp)
add_executable(ispitna5 ispitni_vezhbi/ispitna5.cpp)
add_executable(ispitna6 ispitni_vezhbi/ispitna6.cpp)
add_executable(ispitna7 ispitni_vezhbi/ispitna7.cpp)
add_executable(ispitna8 ispitni_vezhbi/ispitna8.cpp)
add_executable(ispitna9 ispitni_vezhbi/ispitna9.cpp)
add_executable(ispitna10 ispitni_vezhbi/ispitna10.cpp)
add_executable(ispitna11 ispitni_vezhbi/ispitna11.cpp)
add_executable(ispitna12 ispitni_vezhbi/ispitna12.cpp)
add_executable(ispitna13 ispitni_vezhbi/ispitna13.cpp)
add_executable(ispitna14 ispitni_vezhbi/ispitna14.cpp)
add_executable(ispitna15 ispitni_vezhbi/ispitna15.cpp)
add_executable(ispitna16 ispitni_vezhbi/ispitna16.cpp)
add_executable(ispitna17 ispitni_vezhbi/ispitna17.cpp)
add_executable(ispitna18 ispitni_vezhbi/ispitna18.cpp)
add_executable(ispitna19 ispitni_vezhbi/ispitna19.cpp)
add_executable(ispitna20 ispitni_vezhbi/ispitna20.cpp)
add_executable(ispitna21 ispitni_vezhbi/ispitna21.cpp)
add_executable(ispitna22 ispitni_vezhbi/ispitna22.cpp)
add_executable(ispitna23 ispitni_vezhbi/ispitna23.cpp)
add_executable(ispitna24 ispitni_vezhbi/ispitna24.cpp)
add_executable(ispitna25 ispitni_vezhbi/ispitna25.cpp)
add_executable(ispitna26 ispitni_vezhbi/ispitna26.cpp)
add_executable(ispitna27 ispitni_vezhbi/ispitna27.cpp)
add_executable(ispitna28 ispitni_vezhbi/ispitna28.cpp)
add_executable(ispitna29 ispitni_vezhbi/ispitna29.cpp)
add_executable(ispitna30 ispitni_vezhbi/ispitna30.cpp)
add_executable(ispitna31 ispitni_vezhbi/ispitna31.cpp)
add_executable(ispitna32 ispitni_vezhbi/ispitna32.cpp)
add_executable(ispitna33 ispitni_vezhbi/ispitna33.cpp)
add_executable(ispitna34 ispitni_vezhbi/ispitna34.cpp)
add_executable(ispitna35 ispitni_vezhbi/ispitna35.cpp)
add_executable(ispitna36 ispitni_vezhbi/ispitna36.cpp)
add_executable(ispitna37 ispitni_vezhbi/ispitna37.cpp)
add_executable(ispitna38 ispitni_vezhbi/ispitna38.cpp)
add_executable(ispitna39 ispitni_vezhbi/ispitna39.cpp)
add_executable(ispitna40 ispitni_vezhbi/ispitna40.cpp)