cmake_minimum_required(VERSION 3.28)
project(sp24_25)

set(CMAKE_CXX_STANDARD 17)

add_executable(zad0 aud_vezhbi/zad0.cpp)
add_executable(zad1 aud_vezhbi/zad1.cpp)
add_executable(zad2 aud_vezhbi/zad2.cpp)
add_executable(zad3 aud_vezhbi/zad3.cpp)
add_executable(zad4 aud_vezhbi/zad4.cpp)
add_executable(zad5 aud_vezhbi/zad5.cpp)
add_executable(zad6 aud_vezhbi/zad6.cpp)
add_executable(zad7 aud_vezhbi/zad7.cpp)
add_executable(zad8 aud_vezhbi/zad8.cpp)
add_executable(zad9 aud_vezhbi/zad9.cpp)
add_executable(zad10 aud_vezhbi/zad10.cpp)
add_executable(zad11 aud_vezhbi/zad11.cpp)
add_executable(zad12 aud_vezhbi/zad12.cpp)
add_executable(zad13 aud_vezhbi/zad13.cpp)
add_executable(zad14 aud_vezhbi/zad14.cpp)
add_executable(zad15 aud_vezhbi/zad15.cpp)
add_executable(zad16 aud_vezhbi/zad16.cpp)
add_executable(zad17 aud_vezhbi/zad17.cpp)
add_executable(zad18 aud_vezhbi/zad18.cpp)
add_executable(zad19 aud_vezhbi/zad19.cpp)
add_executable(zad20 aud_vezhbi/zad20.cpp)
add_executable(zad21 aud_vezhbi/zad21.cpp)
add_executable(zad22 aud_vezhbi/zad22.cpp)
add_executable(zad23 aud_vezhbi/zad23.cpp)
add_executable(zad24 aud_vezhbi/zad24.cpp)
add_executable(zad25 aud_vezhbi/zad25.cpp)
add_executable(zad26 aud_vezhbi/zad26.cpp)
add_executable(zad27 aud_vezhbi/zad27.cpp)
add_executable(zad28 aud_vezhbi/zad28.cpp)
add_executable(zad29 aud_vezhbi/zad29.cpp)
add_executable(zad30 aud_vezhbi/zad30.cpp)
add_executable(zad31 aud_vezhbi/zad31.cpp)
add_executable(zad32 aud_vezhbi/zad32.cpp)
add_executable(zad33 aud_vezhbi/zad33.cpp)
add_executable(zad34 aud_vezhbi/zad34.cpp)
add_executable(zad35 aud_vezhbi/zad35.cpp)
add_executable(zad36 aud_vezhbi/zad36.cpp)
add_executable(zad37 aud_vezhbi/zad37.cpp)
add_executable(zad38 aud_vezhbi/zad38.cpp)
add_executable(zad39 aud_vezhbi/zad39.cpp)
add_executable(zad40 aud_vezhbi/zad40.cpp)
add_executable(zad41 aud_vezhbi/zad41.cpp)
add_executable(zad42 aud_vezhbi/zad42.cpp)
add_executable(zad43 aud_vezhbi/zad43.cpp)
add_executable(zad44 aud_vezhbi/zad44.cpp)
add_executable(zad45 aud_vezhbi/zad45.cpp)
add_executable(zad46 aud_vezhbi/zad46.cpp)
add_executable(zad47 aud_vezhbi/zad47.cpp)
add_executable(zad48 aud_vezhbi/zad48.cpp)
add_executable(zad49 aud_vezhbi/zad49.cpp)
add_executable(zad50 aud_vezhbi/zad50.cpp)
add_executable(zad51 aud_vezhbi/zad51.cpp)
add_executable(zad52 aud_vezhbi/zad52.cpp)
add_executable(zad53 aud_vezhbi/zad53.cpp)
add_executable(zad54 aud_vezhbi/zad54.cpp)
add_executable(zad55 aud_vezhbi/zad55.cpp)
add_executable(zad56 aud_vezhbi/zad56.cpp)
add_executable(zad57 aud_vezhbi/zad57.cpp)
add_executable(zad58 aud_vezhbi/zad58.cpp)
add_executable(zad59 aud_vezhbi/zad59.cpp)
add_executable(zad60 aud_vezhbi/zad60.cpp)
add_executable(zad61 aud_vezhbi/zad61.cpp)
add_executable(zad62 aud_vezhbi/zad62.cpp)
add_executable(zad63 aud_vezhbi/zad63.cpp)
add_executable(zad64 aud_vezhbi/zad64.cpp)
add_executable(zad65 aud_vezhbi/zad65.cpp)
add_executable(zad66 aud_vezhbi/zad66.cpp)
add_executable(zad67 aud_vezhbi/zad67.cpp)
add_executable(zad68 aud_vezhbi/zad68.cpp)
add_executable(zad69 aud_vezhbi/zad69.cpp)
add_executable(zad70 aud_vezhbi/zad70.cpp)

add_executable(lab1_1 labs_vezhbi/lab1.cpp)
add_executable(lab_1_2 labs_vezhbi/lab2.cpp)
add_executable(labs2_1 labs_vezhbi/lab_nedela_2_1.cpp)
add_executable(labs2_2 labs_vezhbi/lab_nedela_2_2.cpp)
add_executable(labs2_3 labs_vezhbi/lab_nedela_2_3.cpp)
add_executable(lab3_1 labs_vezhbi/lab_nedela_3_1.cpp)
add_executable(lab3_2 labs_vezhbi/lab_nedela_3_2.cpp)
add_executable(lab3_3 labs_vezhbi/lab_nedela_3_3.cpp)
add_executable(lab_nedela_3_1v2 labs_vezhbi/lab_nedela_3_1v2.cpp)
add_executable(lab_nedela_3_2v2 labs_vezhbi/lab_nedela_3_2v2.cpp)
add_executable(lab_nedela_3_3v2 labs_vezhbi/lab_nedela_3_3v2.cpp)
add_executable(lab4_1 labs_vezhbi/lab_nedela_4_1.cpp)
add_executable(lab4_2 labs_vezhbi/lab_nedela_4_2.cpp)
add_executable(lab4_3 labs_vezhbi/lab_nedela_4_3.cpp)
add_executable(lab8_1 labs_vezhbi/lab8_det1.cpp)
add_executable(lab8_2 labs_vezhbi/lab8_det2.cpp)
add_executable(lab8_3 labs_vezhbi/lab8_det3.cpp)

add_executable(lab_ushtrimi_1 labs_vezhbi/lab_ushtrime/lab_ushtrimi_1.cpp)
add_executable(lab_ushtrimi_2 labs_vezhbi/lab_ushtrime/lab_ushtrimi_2.cpp)
add_executable(lab_ushtrimi_3 labs_vezhbi/lab_ushtrime/lab_ushtrimi_3.cpp)
add_executable(lab_ushtrimi_4 labs_vezhbi/lab_ushtrime/lab_ushtrimi_4.cpp)
add_executable(lab_ushtrimi_5 labs_vezhbi/lab_ushtrime/lab_ushtrimi_5.cpp)
add_executable(lab_ushtrimi_6 labs_vezhbi/lab_ushtrime/lab_ushtrimi_6.cpp)
add_executable(lab_ushtrimi_7 labs_vezhbi/lab_ushtrime/lab_ushtrimi_7.cpp)
add_executable(lab_ushtrimi_8 labs_vezhbi/lab_ushtrime/lab_ushtrimi_8.cpp)
add_executable(lab_ushtrimi_9 labs_vezhbi/lab_ushtrime/lab_ushtrimi_9.cpp)
add_executable(lab_ushtrimi_10 labs_vezhbi/lab_ushtrime/lab_ushtrimi_10.cpp)
add_executable(lab_ushtrimi_11 labs_vezhbi/lab_ushtrime/lab_ushtrimi_11.cpp)
add_executable(lab_ushtrimi_12 labs_vezhbi/lab_ushtrime/lab_ushtrimi_12.cpp)
add_executable(lab_ushtrimi_13 labs_vezhbi/lab_ushtrime/lab_ushtrimi_13.cpp)
add_executable(lab_ushtrimi_14 labs_vezhbi/lab_ushtrime/lab_ushtrimi_14.cpp)
add_executable(lab_ushtrimi_15 labs_vezhbi/lab_ushtrime/lab_ushtrimi_15.cpp)
add_executable(lab_ushtrimi_16 labs_vezhbi/lab_ushtrime/lab_ushtrimi_16.cpp)
add_executable(lab_ushtrimi_17 labs_vezhbi/lab_ushtrime/lab_ushtrimi_17.cpp)
add_executable(lab_ushtrimi_18 labs_vezhbi/lab_ushtrime/lab_ushtrimi_18.cpp)
add_executable(lab_ushtrimi_19 labs_vezhbi/lab_ushtrime/lab_ushtrimi_19.cpp)
add_executable(lab_ushtrimi_20 labs_vezhbi/lab_ushtrime/lab_ushtrimi_20.cpp)
add_executable(lab_ushtrimi_21 labs_vezhbi/lab_ushtrime/lab_ushtrimi_21.cpp)
add_executable(lab_ushtrimi_22 labs_vezhbi/lab_ushtrime/lab_ushtrimi_22.cpp)
add_executable(lab_ushtrimi_23 labs_vezhbi/lab_ushtrime/lab_ushtrimi_23.cpp)
add_executable(lab_ushtrimi_24 labs_vezhbi/lab_ushtrime/lab_ushtrimi_24.cpp)
add_executable(lab_ushtrimi_25 labs_vezhbi/lab_ushtrime/lab_ushtrimi_25.cpp)
add_executable(lab_ushtrimi_26 labs_vezhbi/lab_ushtrime/lab_ushtrimi_26.cpp)
add_executable(lab_ushtrimi_27 labs_vezhbi/lab_ushtrime/lab_ushtrimi_27.cpp)
add_executable(lab_ushtrimi_28 labs_vezhbi/lab_ushtrime/lab_ushtrimi_28.cpp)
add_executable(lab_ushtrimi_29 labs_vezhbi/lab_ushtrime/lab_ushtrimi_29.cpp)
add_executable(lab_ushtrimi_30 labs_vezhbi/lab_ushtrime/lab_ushtrimi_30.cpp)

add_executable(ispitna1 ispitni_vezhbi/ispitna1.cpp)
add_executable(ispitna2 ispitni_vezhbi/ispitna2.cpp)
add_executable(ispitna3 ispitni_vezhbi/ispitna3.cpp)
add_executable(ispitna4 ispitni_vezhbi/ispitna4.cpp)
add_executable(ispitna5 ispitni_vezhbi/ispitna5.cpp)
add_executable(ispitna6 ispitni_vezhbi/ispitna6.cpp)
add_executable(ispitna7 ispitni_vezhbi/ispitna7.cpp)
add_executable(ispitna8 ispitni_vezhbi/ispitna8.cpp)
add_executable(ispitna9 ispitni_vezhbi/ispitna9.cpp)
add_executable(ispitna10 ispitni_vezhbi/ispitna10.cpp)
add_executable(ispitna11 ispitni_vezhbi/ispitna11.cpp)
add_executable(ispitna12 ispitni_vezhbi/ispitna12.cpp)
add_executable(ispitna13 ispitni_vezhbi/ispitna13.cpp)
add_executable(ispitna14 ispitni_vezhbi/ispitna14.cpp)
add_executable(ispitna15 ispitni_vezhbi/ispitna15.cpp)
add_executable(ispitna16 ispitni_vezhbi/ispitna16.cpp)
add_executable(ispitna17 ispitni_vezhbi/ispitna17.cpp)
add_executable(ispitna18 ispitni_vezhbi/ispitna18_midterm_eng_task1.cpp)
add_executable(ispitna19 ispitni_vezhbi/ispitna19_midterm_eng_task2.cpp)
add_executable(ispitna20 ispitni_vezhbi/ispitna20_kolokvium_mk_zad1_grupa1.cpp)
add_executable(ispitna21 ispitni_vezhbi/ispitna21_kolokvium_mk_zad2_grupa1.cpp)
add_executable(ispitna22 ispitni_vezhbi/ispitna22_kolokvium_mk_zad1_grupa2.cpp)
add_executable(ispitna23 ispitni_vezhbi/ispitna23_kolokvium_mk_zad2_grupa2.cpp)
add_executable(ispitna24 ispitni_vezhbi/ispitna24.cpp)
add_executable(ispitna25 ispitni_vezhbi/ispitna25.cpp)
add_executable(ispitna26 ispitni_vezhbi/ispitna26.cpp)
add_executable(ispitna27 ispitni_vezhbi/ispitna27.cpp)
add_executable(ispitna28 ispitni_vezhbi/ispitna28.cpp)
add_executable(ispitna29 ispitni_vezhbi/ispitna29.cpp)
add_executable(ispitna30 ispitni_vezhbi/ispitna30.cpp)
add_executable(ispitna31 ispitni_vezhbi/ispitna31.cpp)
add_executable(ispitna32 ispitni_vezhbi/ispitna32.cpp)
add_executable(ispitna33 ispitni_vezhbi/ispitna33.cpp)
add_executable(ispitna34 ispitni_vezhbi/ispitna34.cpp)
add_executable(ispitna35 ispitni_vezhbi/ispitna35.cpp)
add_executable(ispitna36 ispitni_vezhbi/ispitna36.cpp)
add_executable(ispitna37 ispitni_vezhbi/ispitna37.cpp)
add_executable(ispitna38 ispitni_vezhbi/ispitna38.cpp)
add_executable(ispitna39 ispitni_vezhbi/ispitna39.cpp)
add_executable(ispitna40 ispitni_vezhbi/ispitna40.cpp)